log

Thu 14 Mar 2024 08:29:24 PM UTC: 
 tests:  0|7
total_score: 0/70
361812c
Thu 14 Mar 2024 08:34:06 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
1378cf6
Thu 14 Mar 2024 08:42:48 PM UTC: 
 exercises.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:30:26: error: expected identifier or ‘(’ before ‘int’
   30 |   for (int i = size - 1, int k = 0; i >= 0; i--, k++){
      |                          ^~~
exercises.c:30:50: error: ‘k’ undeclared (first use in this function)
   30 |   for (int i = size - 1, int k = 0; i >= 0; i--, k++){
      |                                                  ^
exercises.c:30:50: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
91bbe29
Thu 14 Mar 2024 08:44:43 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:30:26: error: expected identifier or ‘(’ before ‘int’
   30 |   for (int i = size - 1, int k = 0; i >= 0 || k < size - 1; i--, k++){
      |                          ^~~
exercises.c:30:47: error: ‘k’ undeclared (first use in this function)
   30 |   for (int i = size - 1, int k = 0; i >= 0 || k < size - 1; i--, k++){
      |                                               ^
exercises.c:30:47: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
77c4335
Thu 14 Mar 2024 08:45:35 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:32:3: error: expected ‘,’ or ‘;’ before ‘for’
   32 |   for (int i = size - 1; i >= 0; i--){
      |   ^~~
exercises.c:32:26: error: ‘i’ undeclared (first use in this function)
   32 |   for (int i = size - 1; i >= 0; i--){
      |                          ^
exercises.c:32:26: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:32:37: error: expected ‘;’ before ‘)’ token
   32 |   for (int i = size - 1; i >= 0; i--){
      |                                     ^
      |                                     ;
exercises.c:32:37: error: expected statement before ‘)’ token
Compilation failed
58907cc
Thu 14 Mar 2024 08:45:55 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
d8e95ab
Thu 14 Mar 2024 08:53:46 PM UTC: 
 exercises.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:55:11: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   55 |   newSize = cantPares
      |           ^
exercises.c:55:22: error: expected ‘;’ before ‘int’
   55 |   newSize = cantPares
      |                      ^
      |                      ;
   56 |   int arrPar[newSize];
      |   ~~~                 
exercises.c:60:7: error: ‘arrPar’ undeclared (first use in this function)
   60 |       arrPar[aux] = arr[i];
      |       ^~~~~~
exercises.c:60:7: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:65:1: error: control reaches end of non-void function [-Werror=return-type]
   65 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
aafdb12
Thu 14 Mar 2024 08:54:02 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:55:11: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   55 |   newSize = cantPares;
      |           ^
exercises.c:56:7: error: size of array ‘arrPar’ has non-integer type
   56 |   int arrPar[newSize];
      |       ^~~~~~
exercises.c:64:10: error: function returns address of local variable [-Werror=return-local-addr]
   64 |   return arrPar;
      |          ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
80de2eb
Thu 14 Mar 2024 08:54:45 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:64:10: error: function returns address of local variable [-Werror=return-local-addr]
   64 |   return arrPar;
      |          ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
e1a39cb
Thu 14 Mar 2024 08:56:34 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:64:16: error: returning ‘int’ from a function with return type ‘int *’ makes pointer from integer without a cast [-Werror=int-conversion]
   64 |   return arrPar[*newSize];
      |          ~~~~~~^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
2cd160a
Thu 14 Mar 2024 08:56:43 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:64:16: error: array subscript is not an integer
   64 |   return arrPar[newSize];
      |                ^
exercises.c:56:7: error: variable ‘arrPar’ set but not used [-Werror=unused-but-set-variable]
   56 |   int arrPar[*newSize];
      |       ^~~~~~
exercises.c:65:1: error: control reaches end of non-void function [-Werror=return-type]
   65 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
814436f
Thu 14 Mar 2024 08:58:40 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:65:17: error: expected expression before ‘]’ token
   65 |   return arrPar[];
      |                 ^
exercises.c:56:7: error: variable ‘arrPar’ set but not used [-Werror=unused-but-set-variable]
   56 |   int arrPar[*newSize];
      |       ^~~~~~
exercises.c:66:1: error: control reaches end of non-void function [-Werror=return-type]
   66 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
ce0f640
Thu 14 Mar 2024 08:59:16 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:55:11: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   55 |   newSize = cantPares;
      |           ^
exercises.c:57:7: error: size of array ‘arrPar’ has non-integer type
   57 |   int arrPar[newSize];
      |       ^~~~~~
exercises.c:66:10: error: function returns address of local variable [-Werror=return-local-addr]
   66 |   return arrPar;
      |          ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
e26977f
Thu 14 Mar 2024 09:00:18 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:55:11: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   55 |   newSize = cantPares;
      |           ^
exercises.c:57:7: error: size of array ‘arrPar’ has non-integer type
   57 |   int arrPar[newSize];
      |       ^~~~~~
exercises.c:66:17: error: expected expression before ‘]’ token
   66 |   return arrPar[];
      |                 ^
exercises.c:57:7: error: variable ‘arrPar’ set but not used [-Werror=unused-but-set-variable]
   57 |   int arrPar[newSize];
      |       ^~~~~~
exercises.c:67:1: error: control reaches end of non-void function [-Werror=return-type]
   67 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
88d76e7
Thu 14 Mar 2024 09:01:48 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:55:13: error: invalid type argument of unary ‘*’ (have ‘int’)
   55 |   newSize = *cantPares;
      |             ^~~~~~~~~~
exercises.c:66:17: error: expected expression before ‘]’ token
   66 |   return arrPar[];
      |                 ^
exercises.c:57:7: error: variable ‘arrPar’ set but not used [-Werror=unused-but-set-variable]
   57 |   int arrPar[*newSize];
      |       ^~~~~~
exercises.c:67:1: error: control reaches end of non-void function [-Werror=return-type]
   67 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
5fc4645
